# ChangeLog for kde-base/kde-l10n
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-l10n/ChangeLog,v 1.201 2013/08/14 20:23:18 dilfridge Exp $

*kde-l10n-4.11.0 (14 Aug 2013)

  14 Aug 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  +kde-l10n-4.11.0.ebuild:
  Version bump KDE SC 4.11.0

  02 Aug 2013; Johannes Huber <johu@gentoo.org> -kde-l10n-4.10.4.ebuild:
  Remove KDE SC 4.10.4

  02 Aug 2013; Agostino Sarubbo <ago@gentoo.org> kde-l10n-4.10.5.ebuild:
  Stable for ppc64, wrt to bug #477634

  01 Aug 2013; Johannes Huber <johu@gentoo.org> kde-l10n-4.10.4.ebuild,
  kde-l10n-4.10.5.ebuild:
  Update HOMEPAGE wrt bug #478964.

  30 Jul 2013; Agostino Sarubbo <ago@gentoo.org> kde-l10n-4.10.5.ebuild:
  Stable for ppc, wrt to bug #477634

  29 Jul 2013; Agostino Sarubbo <ago@gentoo.org> kde-l10n-4.10.5.ebuild:
  Stable for x86, wrt to bug #477634

  27 Jul 2013; Agostino Sarubbo <ago@gentoo.org> kde-l10n-4.10.5.ebuild:
  Stable for amd64, wrt to bug #477634

*kde-l10n-4.10.5 (02 Jul 2013)

  02 Jul 2013; Johannes Huber <johu@gentoo.org> +kde-l10n-4.10.5.ebuild:
  Version bump KDE SC 4.10.5

  02 Jul 2013; Agostino Sarubbo <ago@gentoo.org> -kde-l10n-4.10.3.ebuild:
  Remove old

  02 Jul 2013; Agostino Sarubbo <ago@gentoo.org> kde-l10n-4.10.4.ebuild:
  Stable for ppc64, wrt to bug #473942

  01 Jul 2013; Agostino Sarubbo <ago@gentoo.org> kde-l10n-4.10.4.ebuild:
  Stable for ppc, wrt to bug #473942

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> kde-l10n-4.10.4.ebuild:
  Stable for x86, wrt to bug #473942

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> kde-l10n-4.10.4.ebuild:
  Stable for amd64, wrt to bug #473942

  08 Jun 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  kde-l10n-4.10.3.ebuild:
  Add workaround for bug 472412 (kde-l10n contains bluedevil files)

  08 Jun 2013; Agostino Sarubbo <ago@gentoo.org> -kde-l10n-4.10.2.ebuild:
  Remove old
