@@ -112,25 +112,17 @@ DIST kde-l10n-zh_CN-4.11.0.tar.xz 3584396 SHA256 c7ac80057e040d0d51deb924224b9ab
 DIST kde-l10n-zh_TW-4.10.5.tar.xz 2583072 SHA256 bee85145de979c420c7672fd65aff40963216a7d40d7f365d183f352ba498851 SHA512 8bbdc2116d18f28ba4f6f185336b054b671f93d166ccce0c8cd1ef4c5d37f6c0351389226a8270c4f2502a9b5faa158a0a706b6c35fcc1e6e73e230bb3f2a07a WHIRLPOOL 28ed5a3f36af08cf64c939d7709da19fc1bebf0e11fbe7306b86e04621f5b875b129af5a706194857ddcb19f5a907bed50156e9736232162658e069f02cc1288
 DIST kde-l10n-zh_TW-4.11.0.tar.xz 2606980 SHA256 09d70540654a2136679fa1d10a9c7d5ab438bf191c9ce807e764d108be1ceb74 SHA512 11c6a30fa1881b01bd8a3a79c6d17eef16107d9b62e5c5f2d93cfed6e1f34c5e256b294913938efda7b809d849274c1d4b585eec699f32aac3e2c26eef0afd2b WHIRLPOOL 6c1c241cf112ad8c82581aca4f560d5a9d50fc9e948548efe8854d9573545e1b2e5b5ba2da27cd17352a15d29d7c0c965cd79e344a5c6627b0f849038bebc3c9
 EBUILD kde-l10n-4.10.5.ebuild 2190 SHA256 f43ea989dece72ab0509e76aebbd41991e7e5ebc48d3dd61bf6c7d1c41fe2f9f SHA512 f0f45eb6ae65267d30e446f55fdc86ab64c5678aca8056a0d58df987657b3b89b00598896bfa80b16ca0ba78234a96032f1c69f09951f4aa5d958d09d59692c9 WHIRLPOOL b7968b81c3eab2cca06ceb47d68c42264b40945801f56cbd4b93e61bf5cd6917d122a483d0bcf33ee6cb6af7d250f7b1e35e40cb6db0f932608d50c3a2bb3911
-EBUILD kde-l10n-4.11.0.ebuild 2194 SHA256 37447f67cd1affe31eae103a9f2f8578869db4b776e1acb68de186fc53eb4cd9 SHA512 3cf182aa26bff5369810860997ed35cb00d6855769428a5192b3579b6dbca9aa4e3546f57fc6ab339d443158b740b7c35fc7dfa87290005d7a2e732ba643bbc4 WHIRLPOOL 568a91e0a0af41c3e390fc7fd15d51f97f201be0b2d8a9f73364c1cc19da511cf928b1603144ca06533a9102a965ca4acd57fbdd1d7cf073ff6ccbb80be073ec
-MISC ChangeLog 25062 SHA256 082b121ef83b56a951bef415487c683885af69d183dfd153d7b53d4b5581e98c SHA512 f48c5e641f35fb83e0284f901ac2e352ddf7ea5bbe401b8626fda054ab1c3bf0d3c92fc5c459aa25687055307137f942db4e17470f57b6baab3aff50517380a4 WHIRLPOOL d08ff96bd5753c517145c38dd3ed2c4d49175a2931a78f0f3c58b81bae99dcc46efb1297d95ce006831e2532b4cf943a6edf00ea2e17a5a1287420ca16093f84
+EBUILD kde-l10n-4.11.0.ebuild 2340 SHA256 15e5075935cdfe2816fbd9f8be5d15893e17f75f19a821c15e743a550353507c SHA512 317c3e85e33cc6e4835e23334a74882386fa5373ea8349315789820c91568d3020531532770a51bc4b4b1d2f1d7b5e851bf422c974a2995c0bf166e10f7eedaf WHIRLPOOL e72973549da095026d83715f9249472b447dfc2d479fd95dd71c7ded57d787f672e1df42e1d5323d5221a6070acda0fb463dc0d63506eb04390df3fb7377cee0
+MISC ChangeLog 25183 SHA256 778a4c4f8885c20c57d64ea6991da16c9df2177c9d3d029040bcfc7ef6989db8 SHA512 6b51d924f21d795c141e0535e8c95caf8e323c8cd880732a1fcd3aced4f6ec5dc81ede5f011d5bd8e66e10719d719ae44b01717f96680d515b36d28a8c14c8b6 WHIRLPOOL b7d5f978c31cf574c0d00bcb438d67b1d4a4862153f329f840631bb82764acb678c1e9abf94c8c4533d5505e5be56dc83f0132b7288b427e2f0e504a118703f0
 MISC metadata.xml 156 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a SHA512 0dcd7cfb246c4518ed1653cb06f5d2c7220ea90160a4b1a1da43edf5124b76d7104fe35a545178b6b3df19f5f3a3eb3f31ac1b4d169e3ca90d78be3e20e58b05 WHIRLPOOL df162e3d521df7decdd84d980e4bc71531bb8e05486c07102c554b529c10a1fb3374dda79d56b13bc037a2d230b4b8ff25702c7a1b86d703a24e8bfe7fe57642
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQJ8BAEBCABmBQJSC+heXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
-QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcEUkQAOi2dbBt4OMzpqGaeU4Zjxjy
-CYnnocFgilk4SZmTLKVGWIriliyGFX89IoLKJvCV2eFWWeNaSmh74EIUl83oZH+m
-oR+GYgBdNYFAfnFC8uLMPqRmnjdnhoua9FMQtSH7BcF1XHEVqWuV/ptZLkzRsmVF
-iMhWiwcnr1SqNq8K+cL3bJKBHecsr8w1FXPU+Herb4uBYHsPWkHxt5hIVjYiO2J+
-laVpUeqnWDCPt9lwk++FV3w19tpRBqvJbcNkPtCOkEz2J63qNGKBOoNBqH5mhnAh
-sL1iWYbrDCzRTwujmGCCQCAMROsa/yC7oigQY0Z+3UE5ZM2kJZkRyBKCWvgUxszp
-cB1WC48C52M0GOod4tujf57UWdj4ZenVkb1pRXpSZzeCvuKOmF8k0gq6n+rggxJA
-+E9jeQ1lYSWB7nwmCCmoM+/NLBljp3Svy/mC2o0SM8XZ4WTlEb5Vi8fbq4wR79eD
-DKU9V/Pw1oLXLSfEZOcbCgg8fHA/kXhJYueh+66ULLUOJGRpeNj/AfzNlufzaYi5
-/somDC2NYw3bwX8SR0R3Reo61sKLhHB7kbtiB9m6HopgAIUwPnKyGWq258IDHUKn
-mw7o94xnqHRbhRDeU3elDV5nGFZ2x8m8V0yKOGc68tH6G/6SU4bSIbhBE+QAhYej
-R0W96s7Z+AIsgpFqvwGz
-=uQwf
+iQEcBAEBCAAGBQJSDSljAAoJEMbwO6tnXQ0sBQEH/1R5xYqP9D35drB3OhdySLyj
+8DemFWMJz+bHJdE41OmjogU/Zzr0XtlpploD6LK/IoWK6JTkDP6qC+/FHSnphki1
+FK5O8UnLWuuk4V0NhndWDTe7sysnKla80tPssIwD1gIaV81Yf8dt7MbWJ8rh0dWu
+rUXX5SuIX9ZsCBWUttBXKK+f7TICD6/PsL9nhcFHx/dXa92X0h6DiPT52IFaDgok
+Y5cCsIxl3LB+k0r+s3LSNgVdvR3zN9XcmiRu94aKZw+/Cp9hDfzwQLW7zcxVD0Kd
+9I/ks5bAkpnbqIJQxGFf9H68IIMU8eUfUYnjA4fX3xSJ2PPJrSQoNhHImxsG61g=
+=h5c8
 -----END PGP SIGNATURE-----
