@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kde-l10n
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-l10n/ChangeLog,v 1.201 2013/08/14 20:23:18 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-l10n/ChangeLog,v 1.202 2013/08/15 19:20:10 kensington Exp $
+
+  15 Aug 2013; Michael Palimaka <kensington@gentoo.org> kde-l10n-4.11.0.ebuild:
+  Fix file collisions wrt bug #481106.
 
 *kde-l10n-4.11.0 (14 Aug 2013)
 
